2003-05-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCanvPoly.c (PolygonToPostscript):
	* tests/canvPs.test: correct crash when generating postscript for
	a single-line polygon (point) with no color. [Bug #734498] (wilm)

2003-05-10  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXClipboard.c (TkSelGetSelection): Convert
	'\r' to '\n' on the way into Tcl.
	
2003-05-08  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/image.test (image-15.1): Test to ensure that widgets pick
	up image information even if the image is deleted and recreated.
	* generic/tkImage.c (Tk_ImageObjCmd): Use the ImageMaster's
	deleted flag to stop deleted images from showing up in the various
	[image *] operations.  Can't delete directly from the table
	because that makes us lose the information about what widgets want
	to use the image.  [Bug #634864]
	
2003-04-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* macosx/tkMacOSXButton.c (TkpDisplayButton): correct typo for
	stippleGC [Bug #730124].

2003-04-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkButton.h:                         Rewrote the handling
	* generic/tkButton.c (TkButtonWorldChanged):  of compound *buttons
	* mac/tkMacButton.c (TkpDisplayButton):       to correctly display
	* macosx/tkMacOSXButton.c (TkpDisplayButton): mixture of disabledfg,
	* unix/tkUnixButton.c (TkpDisplayButton):     selectcolor, indicator,
	* win/tkWinButton.c (TkpDisplayButton):       etc.  *buttons will
	now only stipple the image, unless no disabledfg is given, in which 
	case it will stipple the whole button.

	* library/bgerror.tcl: make bgerror dialog topmost on Windows to
	prevent it being covered by other windows.

	* unix/tkUnixButton.c (TkpDisplayButton): Use the normalTextGc when
	* win/tkWinButton.c (TkpDisplayButton):   displaying disabled text
	that have images, as they get a gray50 stipple as well and the
	disabledGc is not set up correctly for font drawing. [Bug #477740]

2003-04-18  Jeff Hobbs  <jeffh@ActiveState.com>
